--- a/arch/arm/boot/dts/bcm2837.dtsi
+++ b/arch/arm/boot/dts/bcm2837.dtsi
@@ -1,4 +1,5 @@
 #include "bcm283x.dtsi"
+#include <dt-bindings/thermal/thermal.h>
 
 / {
 	compatible = "brcm,bcm2837";
@@ -47,6 +48,7 @@
 			clocks = <&arm_clk>;
 			clock-names = "cpu";
 			operating-points-v2 = <&cpu0_opp_table>;
+			#cooling-cells = <2>;
 		};
 
 		cpu1: cpu@1 {
@@ -58,6 +60,7 @@
 			clocks = <&arm_clk>;
 			clock-names = "cpu";
 			operating-points-v2 = <&cpu0_opp_table>;
+			#cooling-cells = <2>;
 		};
 
 		cpu2: cpu@2 {
@@ -69,6 +72,7 @@
 			clocks = <&arm_clk>;
 			clock-names = "cpu";
 			operating-points-v2 = <&cpu0_opp_table>;
+			#cooling-cells = <2>;
 		};
 
 		cpu3: cpu@3 {
@@ -80,6 +84,7 @@
 			clocks = <&arm_clk>;
 			clock-names = "cpu";
 			operating-points-v2 = <&cpu0_opp_table>;
+			#cooling-cells = <2>;
 		};
 	};
 
@@ -117,6 +122,26 @@
 
 &cpu_thermal {
 	coefficients = <(-538)	412000>;
+
+	trips {
+		cpu_alert0: cpu-alert0 {
+			temperature	= <70000>;
+			hysteresis	= <0>;
+			type		= "passive";
+		};
+	};
+
+	cooling-maps {
+		map0 {
+			trip = <&cpu_alert0>;
+			cooling-device = <&cpu0 THERMAL_NO_LIMIT THERMAL_NO_LIMIT>;
+		};
+
+		map1 {
+			trip = <&cpu_crit>;
+			cooling-device = <&cpu0 THERMAL_NO_LIMIT THERMAL_NO_LIMIT>;
+		};
+	};
 };
 
 /* enable thermal sensor with the correct compatible property set */
